--- a/sample/src/main/res/layout/fragment_http.xml
+++ b/sample/src/main/res/layout/fragment_http.xml
@@ -3,7 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+    <Button
+        android:id="@+id/btn_test0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TEST0" />
     <Button
         android:id="@+id/btn_test1"
         android:layout_width="wrap_content"
